Site now visible when coming back on pages fix

--- a/style.css
+++ b/style.css
@@ -260,12 +260,6 @@ a:hover {
 	animation: fadeIn .5s ease-in;
 }
 
-.animate-out {
-	-webkit-transition: opacity .5s;
-	transition: opacity .5s;
-	opacity: 0;
-}
-
 @-webkit-keyframes fadeIn {
 	from {
 		opacity: 0;
